# io-people

./: ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  SECURITY.md  flake.nix  shell.nix
docs/: README.md  etags.md
examples/: std_people.rs
src/: coroutine.rs  lib.rs
src/v1/: client.rs  mod.rs  query.rs  send.rs
src/v1/rest/: contact_groups.rs  mod.rs  people.rs
src/v1/rest/contact_groups/: batch_get.rs  create.rs  delete.rs  get.rs  list.rs  mod.rs  types.rs  update.rs
src/v1/rest/contact_groups/members/: mod.rs  modify.rs
src/v1/rest/other_contacts/: copy_other_contact_to_my_contacts_group.rs  list.rs  mod.rs  search.rs
src/v1/rest/people/: batch_create_contacts.rs  batch_delete_contacts.rs  batch_update_contacts.rs  create_contact.rs  delete_contact.rs  delete_contact_photo.rs  get.rs  get_batch_get.rs  list_directory_people.rs  mod.rs  search_contacts.rs  search_directory_people.rs  types.rs  update_contact.rs  update_contact_photo.rs
src/v1/rest/people/connections/: list.rs  mod.rs
tests/: common.rs  coroutines.rs  people.rs
